samples/_failures_safe/1761366539_a6c408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c432b5a9.c: In function ‘main’:
./samples/SAFE/__tmp_c432b5a9.c:168:5: error: expected expression at end of input
  168 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_c432b5a9.c:168:5: error: expected declaration or statement at end of input
